pkg/controller/testdata/authorization-policy/expected.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: MeshTLSAuthentication
metadata:
  name: mesh-authn-profile-acorn
  namespace: acorn
spec:
  identities:
    - '*.foo1.serviceaccount.identity.linkerd.cluster.local'
    - '*.foo2.serviceaccount.identity.linkerd.cluster.local'
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: authz-profile-acorn-foo-80
  namespace: foo1
spec:
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: mesh-authn-profile-acorn
      namespace: acorn
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: foo-80
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: authz-profile-acorn-bar-80
  namespace: foo2
spec:
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: mesh-authn-profile-acorn
      namespace: acorn
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: bar-80
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: authz-profile-ingress-foo-80
  namespace: foo1
spec:
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: acorn-ingress-network-authentication
      namespace: kube-system
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: foo-80
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: authz-profile-ingress-bar-80
  namespace: foo2
spec:
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: NetworkAuthentication
      name: acorn-ingress-network-authentication
      namespace: kube-system
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: bar-80
